framec_tests/language_specific/typescript/v3_facade_smoke/negative/transition_unquoted_state.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                __frame_transition(B);
            }
        }
}

